--- a/KoOrderRegister/Modules/Order/Pages/OrderListPage.xaml
+++ b/KoOrderRegister/Modules/Order/Pages/OrderListPage.xaml
@@ -50,6 +50,7 @@
                           ItemsSource="{Binding Orders}"
                           SeparatorVisibility="Default"
                           SeparatorColor="{AppThemeBinding Light='LightGray', Dark='White'}"
+                          ItemAppearing="ListView_ItemAppearing"
                           RowHeight="150"
                           Grid.Row="1">
                     <ListView.ItemTemplate>
