#87 remove not used poup page, add base view model

--- a/KoOrderRegister/Modules/Customer/Pages/PersonDetailsPage.xaml
+++ b/KoOrderRegister/Modules/Customer/Pages/PersonDetailsPage.xaml
@@ -124,7 +124,7 @@
            
         </ScrollView>
 
-        <Grid IsVisible="{Binding IsLoading}"
+        <Grid IsVisible="{Binding IsRefreshing}"
               BackgroundColor="{AppThemeBinding Light=White, Dark=Black}"
               Opacity="0.4">
             <VerticalStackLayout>
