--- a/KoOrderRegister/Modules/Settings/Pages/SettingsPage.xaml
+++ b/KoOrderRegister/Modules/Settings/Pages/SettingsPage.xaml
@@ -11,7 +11,7 @@
         <Grid>
                 <Grid Padding="10"
                       ColumnDefinitions="Auto, *"
-                      RowDefinitions="Auto, Auto, Auto, Auto">
+                      RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto">
                     <Label Text="{x:Static res:AppRes.SelectLanguage}"
                            Grid.Row="0"
                            Grid.Column="0"
@@ -44,17 +44,35 @@
                             Margin="10, 10, 10,10" />
 
 
-                <Label Text="{x:Static res:AppRes.CheckAppUpdateLabel}"
-                       Grid.Row="3"
-                       Grid.Column="0"
-                       Margin="10, 20, 10,10" />
-                <Button Text="{x:Static res:AppRes.CheckAppUpdate}"
-                        Grid.Row="3"
-                        Grid.Column="2"
-                        Command="{Binding AppUpdateCommand}"
-                        Margin="10, 10, 10,10" />
+                    <Label Text="{x:Static res:AppRes.CheckAppUpdateLabel}"
+                           Grid.Row="3"
+                           Grid.Column="0"
+                           Margin="10, 20, 10,10" />
+                    <Button Text="{x:Static res:AppRes.CheckAppUpdate}"
+                            Grid.Row="3"
+                            Grid.Column="2"
+                            Command="{Binding AppUpdateCommand}"
+                            Margin="10, 10, 10,10" />
 
 
+                    <Label Text="{x:Static res:AppRes.ChangeAppThemeLabel}"
+                           Grid.Row="4"
+                           Grid.Column="0"
+                           Margin="10, 20, 10,10" />
+                    <Button Text="{x:Static res:AppRes.ChangeAppTheme}"
+                            Grid.Row="4"
+                            Grid.Column="2"
+                            Command="{Binding AppThemeSwitchCommand}"
+                            Margin="10, 10, 10,10" />
+                    
+                    <Label Text="{x:Static res:AppRes.ChangeAppThemeAutomaticLabel}"
+                           Grid.Row="5"
+                           Grid.Column="0"
+                           Margin="10, 20, 10,10" />
+                    <Switch Grid.Row="5"
+                            Grid.Column="2"
+                            IsToggled="{Binding IsAutoUserTheme}"
+                            Margin="10, 10, 10,10" />
 
 
             </Grid>
