--- a/KoOrderRegister/Modules/Settings/Pages/SettingsPage.xaml
+++ b/KoOrderRegister/Modules/Settings/Pages/SettingsPage.xaml
@@ -11,7 +11,7 @@
         <Grid>
                 <Grid Padding="10"
                       ColumnDefinitions="Auto, *"
-                      RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto">
+                  RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto">
                     <Label Text="{x:Static res:AppRes.SelectLanguage}"
                            Grid.Row="0"
                            Grid.Column="0"
@@ -73,6 +73,21 @@
                             Grid.Column="2"
                             IsToggled="{Binding IsAutoUserTheme}"
                             Margin="10, 10, 10,10" />
+
+                <StackLayout IsVisible="{Binding IsBetaFunctions}"
+                             Grid.Row="6"
+                             Grid.Column="2">
+                    <Label Text="Beta Functions" />
+                    <Label Text="{x:Static res:AppRes.ExportDatabaseToExcel}"
+                           Grid.Row="4"
+                           Grid.Column="0"
+                           Margin="10, 20, 10,10" />
+                    <Button Text="{x:Static res:AppRes.ExportDatabaseToExcel}"
+                            Grid.Row="4"
+                            Grid.Column="2"
+                            Command="{Binding ExportData}"
+                            Margin="10, 10, 10,10" />
+                </StackLayout>
 
 
             </Grid>
